app/globals.css
@import "tailwindcss";

:root {
  --background: #0c0c0c;
  --background-muted: #161616;
  --foreground: #f4f2ee;
  --foreground-muted: #ffffff;
  --primary: #e5bc29;
  --primary-foreground: #e8bd26;
  --text-muted: #989795;

  --font-bebas-neue: "Bebas Neue", sans-serif;
  --font-jet-brains-mono: "JetBrains Mono", monospace;
  --font-dm-sans: "DM Sans", sans-serif;
}

@theme {
  --color-background: var(--background);
  --color-background-muted: var(--background-muted);
  --color-foreground: var(--foreground);
  --color-foreground-muted: var(--foreground-muted);
  --color-text-muted: var(--text-muted);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --font-bebas-neue: var(--font-bebas-neue);
  --font-jet-brains-mono: var(--font-jet-brains-mono);
  --font-dm-sans: var(--font-dm-sans);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  @apply bg-background text-foreground overflow-hidden font-dm-sans;
}

/* SCROLLBAR STYLES */

::-webkit-scrollbar {
  width: 6px;
}
::-webkit-scrollbar-track {
  background: var(--background);
  border-left: 1px solid var(--primary);
}

::-webkit-scrollbar-thumb {
  background: var(--primary);
}

/* ===========  HEADER SECTION =========== */
.header-statistics {
  @apply text-start font-jet-brains-mono;
}
.header-statistics p {
  @apply text-sm text-text-muted;
}

.header-statistics span {
  @apply text-primary text-4xl font-bold;
}

